# xplane-sdk

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
xplane-sdk-sys/: Cargo.toml  README.md  build.rs  wrapper.h
xplane-sdk-sys/SDK/Libraries/Mac/XPLM.framework/: XPLM
xplane-sdk-sys/SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
xplane-sdk-sys/src/: lib.rs  pre-built-bindings.rs
