[package]
name = "xplane-sdk-sys"
description = "Low level bindings for the X-Plane SDK"
documentation = "https://docs.rs/xplane-sdk-sys/"
readme = "README.md"
repository = "https://github.com/constvoidptr/xplane-sdk/tree/master/xplane-sdk-sys"
license = "MIT OR Apache-2.0"
keywords = ["x-plane", "xplane", "sdk", "bindings"]
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
generate-bindings = ["dep:bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }